feat: Add debug info about current subscene in ARCADE and CUTSCENKI